# graph-rag

./: .env.template  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml  validate-codecov-config.yml
data/: animals.jsonl  astrapy.README.md  astrapy.jsonl  para_with_hyperlink_short.jsonl
data/historical_figures_website/: alan_turing.html  albert_einstein.html  alexander_graham_bell.html  alexander_the_great.html  aristotle.html  leonardo_da_vinci.html  nikola_tesla.html  philip_ii.html  raphael.html  socrates.html
docs/: .gitignore  _graph_rag_example_helpers.yml  _graph_retriever.yml  _langchain_graph_retriever.yml  _quarto.yml  _quartodoc.yml  getting-started.qmd  getting_started.qmd  index.md  index.qmd  objects.json  styles.css
docs/blog/posts/: introducing-graph-rag.md
docs/css/: styles.css
docs/data/historical_figures/: ada_lovelace.html  alfred_russel_wallace.html  charles_babbage.html  charles_darwin.html  galileo_galilei.html  index.html  isaac_newton.html  marie_curie.html  michelangelo.html  nicolaus_copernicus.html  plato.html  thomas_edison.html  thomas_huxley.html
docs/examples/: .gitignore  code-generation.ipynb  index.md  index.qmd  lazy-graph-rag.ipynb  movie-reviews-graph-rag.ipynb
docs/faqs/: index.md
docs/get-started/: adapters.md  edges.md  index.md  overview.qmd  strategies.md  traversal.md
docs/guide/: adapters.md  edges.md  get-started.md  index.md  migration.md  transformers.md  traversal.md
docs/posts/: index.qmd  introducing-graph-rag.qmd
docs/reference/: _metadata.yml  index.md  index.qmd
docs/reference/graph_rag_example_helpers/: _metadata.yml  index.md
docs/reference/graph_retriever/: _metadata.yml  adapters.md  edges.md  index.md  strategies.md  testing.md  utils.md
docs/reference/langchain_graph_retriever/: _metadata.yml  adapters.md  index.md  transformers.md
overrides/: main.html
overrides/partials/: toc.html
scripts/: drop-astra-keyspace.py  healthcheck.sh  langchain-interlinks.py
src/graph_pancake/document_transformers/: gliner_entity_extractor.py  html_hyperlink_extractor.py  keybert_keyword_extractor.py  metadata_denormalizer.py
src/graph_pancake/retrievers/: consts.py  document_cache.py  edge.py  edge_helper.py  embedded_document.py  generic_graph_traversal_retriever.py  graph_mmr_traversal_retriever.py  graph_traversal_retriever.py  mmr_helper.py  node.py
src/graph_pancake/retrievers/node_selectors/: __init__.py  eager_node_selector.py  eager_scoring_node_selector.py  mmr_scoring_node_selector.py  node_selector.py
src/graph_pancake/retrievers/store_adapters/: astra.py  base.py
src/graph_pancake/retrievers/strategy/: __init__.py  base.py  mmr.py
src/graph_pancake/retrievers/traversal_adapters/: astra_graph_traversal_adapter.py  base.py  cassandra_graph_traversal_adapter.py  chroma_graph_traversal_adapter.py  graph_traversal_adapter.py  open_search.py  open_search_graph_traversal_adapter.py
src/graph_pancake/retrievers/traversal_adapters/eager/: __init__.py  astra_traversal_adapter.py  cassandra_traversal_adapter.py  chroma_traversal_adapter.py  in_memory_traversal_adapter.py  open_search_traversal_adapter.py  traversal_adapter.py
src/graph_pancake/retrievers/traversal_adapters/generic/: __init__.py  astra.py  astra_graph_traversal_adapter.py  base.py  cassandra.py  chroma.py  chroma_graph_traversal_adapter.py  in_memory.py  open_search.py  open_search_graph_traversal_adapter.py
src/graph_pancake/retrievers/traversal_adapters/mmr/: __init__.py  astra_mmr_traversal_adapter.py  cassandra_mmr_traversal_adapter.py  chroma_mmr_traversal_adapter.py  in_memory_mmr_traversal_adapter.py  mmr_traversal_adapter.py  open_search_mmr_traversal_adapter.py
tests/: conftest.py
tests/data/: animals.jsonl
tests/embeddings/: __init__.py  simple_embeddings.py
tests/integration_tests/: conftest.py  stores.py
tests/integration_tests/retrievers/: animal_docs.py  conftest.py  earth_docs.py  parser_docs.py  test_eager_graph_traversal.py  test_generic_graph_traversal.py  test_generic_graph_traversal_eager.py  test_generic_graph_traversal_mmr.py  test_generic_mmr_graph_traversal.py  test_graph_traversal.py  test_graph_traversal_eager.py  test_graph_traversal_mmr.py  test_mmr_graph_traversal.py
tests/unit_tests/: conftest.py
tests/unit_tests/retrievers/: conftest.py  test_edge_helper.py  test_generic_graph_traversal.py  test_generic_graph_traversal_eager.py  test_generic_graph_traversal_mmr.py  test_graph_traversal.py  test_mmr_graph_traversal.py
