[project]
name = "graph-retriever-workspace"
version = "0.1.0"
description = "uv workspace for Graph RAG projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = "Apache-2.0"
license-files = ["LICENSE"]

classifiers = ["Private :: Do Not Upload"]

[project.urls]
"Homepage" = "https://github.com/datastax/graph-rag"
"Bug Reports" = "https://github.com/datastax/graph-rag/issues"
"Documentation" = "https://datastax.github.com/graph-rag"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "T201", "D", "W", "UP", "DOC", "D213"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"**/{tests,tools,scripts}/*" = ["D", "DOC"]
"*.ipynb" = ["D", "DOC"]

[tool.ruff.format]
docstring-code-format = true

[tool.uv.sources]
graph-retriever = { workspace = true }
langchain-graph-retriever = { workspace = true }
graph-rag-example-helpers = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.25.2",
    "poethepoet>=0.32.1",
]

docs = [
    "quartodoc>=0.9.1",
    "nbformat>=5.10.4",
    "nbclient>=0.10.2",
    "langchain-openai>=0.3.1",
    "ipykernel>=6.29.5",
    "langchain-astradb>=0.5.2",
    "langchain-graph-retriever>=0.1.0",
    "matplotlib>=3.10.0",
    "jupyterlab>=4.3.4",
    "pip>=25.0",
    "graph-rag-example-helpers",
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = [
    "packages/graph-retriever/src/graph_retriever",
    "packages/langchain-graph-retriever/src/langchain_graph_retriever",
    ]

[tool.poe]
# comment this out to debug poe tasks
verbosity = -1

[tool.poe.env]
RUFF = "ruff@0.8.6"
DEPTRY = "deptry@0.22.0"

[tool.poe.tasks.install-deps]
help = "Install dependencies from all packages and all extras"
cmd = "uv sync --all-packages --all-extras"

[tool.poe.tasks.install-docs-deps]
help = "Install dependencies from all packages and all extras"
cmd = "uv sync --all-packages --all-extras --group docs"

[tool.poe.tasks.lock-check]
help = "Runs `uv lock --locked` to check uv.lock file consistency (fix with `lock-fix`)"
cmd = "uv lock --locked"

[tool.poe.tasks.lock-fix]
help = "Runs `uv lock` to fix uv.lock file consistency"
cmd = "uv lock"

[tool.poe.tasks.fmt-check]
help = "Runs `ruff format --check` to check for formatting issues (fix with `fmt-fix`)"
cmd = "uvx ${RUFF} format --check ."

[tool.poe.tasks.fmt-fix]
help = "Runs `ruff format` to fix formatting issues"
cmd = "uvx ${RUFF} format ."

[tool.poe.tasks.lint-check]
help = "Runs `ruff check` to check for lint issues (fix with `lint-fix`)"
cmd = "uvx ${RUFF} check ."

[tool.poe.tasks.lint-fix]
help = "Runs `ruff check --fix` to fix lint issues"
cmd = "uvx ${RUFF} check --fix ."

[tool.poe.tasks.type-check]
help = "Runs `mypy` to check for static type issues"
cwd = "packages/langchain-graph-retriever"
sequence = [
    {cmd = "uv run mypy .", cwd = "packages/graph-retriever"},
    {cmd = "uv run mypy .", cwd = "packages/langchain-graph-retriever"},
    {cmd = "uv run mypy .", cwd = "packages/graph-rag-example-helpers"},
]

[tool.poe.tasks.dep-check]
help = "Runs `deptry` to check for dependency issues"
sequence = [
    {cmd = "uvx ${DEPTRY} src tests", cwd = "packages/graph-retriever"},
    {cmd = "uvx ${DEPTRY} src tests", cwd = "packages/langchain-graph-retriever"},
    {cmd = "uvx ${DEPTRY} src tests", cwd = "packages/graph-rag-example-helpers"},
]

[tool.poe.tasks.lint]
help = "Runs all formatting, lints, and checks (fixing where possible)"
sequence = [ "lock-fix", "fmt-fix", "lint-fix", "type-check", "dep-check"]

[tool.poe.tasks.test]
help = "Runs all tests (against in-memory stores)"
cwd = "packages/langchain-graph-retriever"
cmd = "uv run pytest -vs ."

[tool.poe.tasks.test-all]
help = "Runs all tests (against all stores)"
cwd = "packages/langchain-graph-retriever"
cmd = "uv run pytest -vs . --stores=all"

[tool.poe.tasks.build]
help = "Builds all the packages"
sequence = [
    "install-deps",
    {cmd = "uv build --all-packages"},
]

[tool.poe.tasks.docs-api]
help = "Updates the package installation and generates the API docs"
sequence = [
    {cmd = "uv pip install packages/* --force-reinstall"},
    {cmd = "uv run quartodoc build", cwd="docs"},
]

[tool.poe.tasks.docs-preview]
help = "Starts a live preview of the docs site"
sequence = [
    "docs-api",
    {cmd = "uv run quarto preview", cwd="docs"},
]

[tool.poe.tasks.docs-build]
help = "Builds the docs site in `_site`"
sequence = [
    "docs-api",
    {cmd = "uv run quarto render", cwd="docs"},
]

[tool.poe.tasks.help]
help = "Shows this help"
cmd = "uv run poe --help"
